# newsletters

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: README.md
.claude/agents/: campaign-analyzer.md  newsletter-previewer.md  newsletter-writer.md
.claude/commands/: campaign-stats.md  create-newsletter.md  preview-newsletter.md  upload-draft.md
.github/workflows/: ci.yml
config/: mailchimp-settings.json
editions/: 2026-07-15-launch-reception.html  2026-07-28-launch.html
scripts/: import_attio_contacts.py  lint-newsletters.sh  remove_overlap_tag.py  style_signup_form.py
src/newsletter_uploader/: __init__.py  audience.py  cli.py  mailchimp_client.py  uploader.py
templates/: axiom-newsletter-template.html
tests/: __init__.py  conftest.py  test_audience.py  test_cli.py  test_mailchimp_client.py  test_uploader.py
